# rp-binary-info

./: Cargo.toml  README.md
example/pico-example/: Cargo.toml  README.md  build.rs  memory.x
example/pico-example/src/: main.rs
src/: entry.rs  lib.rs
